js objects & strings

--- a/js/w3/index.html
+++ b/js/w3/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>PLIK</title>
   <meta charset="utf-8">
-  <script src="src.js"></script>
 </head>
 
 <body>
@@ -11,5 +10,14 @@
   <button onclick="changeStyle()">Change style</button>
   <b>Hej</b>
   <p id="demo"></p>
+  <h3>Objects</h3>
+  <p id="objects"></p>
+  <h3>Stringi</h3>
+  <p id="string"></p>
+
+  <!-- skrypty -->
+  <script src="src.js"></script>
+  <script src="objects.js"></script>
+  <script src="strings.js"></script>
 </body>
 </html>
