--- a/js/w3/index.html
+++ b/js/w3/index.html
@@ -14,10 +14,13 @@
   <p id="objects"></p>
   <h3>Stringi</h3>
   <p id="string"></p>
+  <h3>Array</h3>
+  <p id="array"></p>
 
   <!-- skrypty -->
   <script src="src.js"></script>
   <script src="objects.js"></script>
   <script src="strings.js"></script>
+  <script src="array.js"></script>
 </body>
 </html>
