--- a/js/w3/index.html
+++ b/js/w3/index.html
@@ -22,5 +22,6 @@
   <script src="objects.js"></script>
   <script src="strings.js"></script>
   <script src="array.js"></script>
+  <script src="logical_operators.js"></script>
 </body>
 </html>
