js break and continue

--- a/js/w3/index.html
+++ b/js/w3/index.html
@@ -16,6 +16,12 @@
   <p id="string"></p>
   <h3>Array</h3>
   <p id="array"></p>
+  <h3>Break and continue</h3>
+  Below 2 for loops are being called.</br>
+  Both loops are repeated 10 times, while upon reaching 3rd iteration first loop uses <code>break</code> statement and the second loop uses <code>continue</code>.</br>
+  Here's what happens:<br/>
+
+  <p id="bc"></p>
 
   <!-- skrypty -->
   <script src="src.js"></script>
@@ -23,5 +29,6 @@
   <script src="strings.js"></script>
   <script src="array.js"></script>
   <script src="logical_operators.js"></script>
+  <script src="break_continue.js"></script>
 </body>
 </html>
