--- a/js/canvas/index.html
+++ b/js/canvas/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style type="text/css">
-        canvas { border: 1px solid black; }
+        canvas { 
+            border: 1px solid black; 
+        }
     </style>
 
 </head>
-<body onload="draw()">
+<body>
     <canvas id="tut" width="150px" height="150px"></canvas>
-
+    <canvas id="paths" width="150px" height="150px"></canvas>
+    <canvas id="smiling-face" width="150px" height="150px"></canvas>
 <script src="src.js"></script>
 </body>
 </html>
