canvas bezier curves

--- a/js/canvas/index.html
+++ b/js/canvas/index.html
@@ -16,6 +16,7 @@
     <canvas id="tut" width="150px" height="150px"></canvas>
     <canvas id="paths" width="150px" height="150px"></canvas>
     <canvas id="smiling-face" width="150px" height="150px"></canvas>
+    <canvas id="bezier-curves" width="150px" height="150px"></canvas>
 <script src="src.js"></script>
 </body>
 </html>
