--- a/js/electron/spendings/mainWindow.html
+++ b/js/electron/spendings/mainWindow.html
@@ -5,5 +5,19 @@
 </head>
 <body>
   <h1>Spendings</h1>
+  <ul></ul>
+
+  <script>
+    const electron = require('electron');
+    const {ipcRenderer} = electron;
+    const ul = document.querySelector('ul');
+
+    ipcRenderer.on('item:add', (e, item) => {
+      const li = document.createElement('li');
+      const itemText = document.createTextNode(item);
+      li.appendChild(itemText);
+      ul.appendChild(li);
+    });
+  </script>
 </body>
 </html>
