--- a/js/p5js/index.html
+++ b/js/p5js/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+      <title>have a nice day</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
     <script src="particle.js"></script>
     <script src="sketch.js"></script>
